--- a/talks/NWB-2014.html
+++ b/talks/NWB-2014.html
@@ -46,7 +46,9 @@
 					<h3>Nothing in neurodata makes sense</h1>
 					<h1>except in light of behavioral annotations</h3>
 					<p>
-						<small><a href="http://justinkiggins.com">Justin Kiggins</a> / UC San Diego</small>
+						<small>
+							<a href="http://justinkiggins.com">Justin Kiggins</a> / Neurosciences Doctoral Candidate at UC San Diego
+						</small>
 					</p>
 					<p>
 						<small>Neurodata Without Borders Hackathon / Nov 2014</small>
@@ -94,11 +96,12 @@
 				<section>
 					<h2>Delayed Match to Sample</h2>
 					<pre>
-						<code data-trim contenteditable>
-Time          ID  Sample s_Time  s_Dur   Target  t_Time t_Dur Response r_Time Error
-12:13:05.265  1   puppy  0.0     0.5     puppy   1.5    0.5   Right    2.1157 False
-12:13:14.655  2   kitty  0.0     0.5     puppy   1.0    0.5   Right    2.004  True
-12:13:87.098  3   puppy  0.0     0.5     kitty   1.2    0.5   Left     2.298  False
+						<code>
+Time         | ID | Sample | s_Time | s_Dur | Target | t_Time | t_Dur | Response | r_Time | Error
+-------------|----|------- |--------|-------|--------|--------|-------|----------|--------|------
+12:13:05.265 | 1  | puppy  | 0.0    | 0.5   | puppy  | 1.5    | 0.5   | Right    | 2.115  | False
+12:13:14.655 | 2  | kitty  | 0.0    | 0.5   | puppy  | 1.0    | 0.5   | Right    | 2.004  | True
+12:13:87.098 | 3  | puppy  | 0.0    | 0.5   | kitty  | 1.2    | 0.5   | Left     | 2.298  | False
 						</code>
 					</pre>
 					<p>However: Sample, Target &amp; Response are each their own Events</p>
@@ -106,7 +109,7 @@ Time          ID  Sample s_Time  s_Dur   Target  t_Time t_Dur Response r_Time Er
 				<section>
 					<h2>Defining trials by "grouping" stimulus, response, and consequence events</h2>
 					<pre>
-						<code data-trim contenteditable>
+						<code>
 Events
 ======
 Time         | ID | Class  | Value  | Duration
@@ -119,7 +122,6 @@ Time         | ID | Class  | Value  | Duration
 12:13:15.655 | 6  | target | puppy  | 0.5
 12:13:16.659 | 7  | resp   | left   | --
 12:13:16.668 | 8  | conseq | punish | 5.0    
-...
 
 Trials
 ======
@@ -127,17 +129,18 @@ ID | Sample_id | Target_id | Resp_id | Conseq_id | Task
 ---|-----------|-----------|---------|-----------|------
 1  | 1         | 2         | 3       | 4         | match
 2  | 5         | 6         | 7       | 8         | match
-...
 						</code>
 					</pre>
 				</section>
 
 				<section>
+					<p>...or...</p>
+				</section>
+
+				<section>
 					<h2>Defining Target-Sample relationship with references between events</h2>
 					<pre>
-						<code data-trim contenteditable>
-Events
-======
+						<code>
 Time         | ID | Class  | Value  | Duration | Sample_id
 -------------|----|--------|--------|----------|----------
 12:13:05.265 | 1  | sample | puppy  | 0.5      | --
@@ -159,22 +162,30 @@ Time         | ID | Class  | Value  | Duration | Sample_id
 				</section>
 
 				<section>
-					<h2>More complex relationships underly more complex tasks</h2>
+					<h2>More complex relationships underly more complex behaviors</h2>
 					<ul>
 						<li>Task switching on cue</li>
 						<li>Task switching on cue</li>
-						<li>Task switching on cue</li>
+						<li>Chunking in motor control</li>
+						<li>Hierarchies in birdsong</li>
 					</ul>
-					<p>Acoustic features comprise Notes, which comprise Motifs, which comprise Bouts</p>
+				</section>
+
+				<section>
+					<h2>What does this mean for <strong>NeuroData</strong>?</h2>
 				</section>
 
 				<section>
 					<h2>Allow for Normalization of Events</h2>
 					<ul>
-						<li>SQL &em; Foreign keys</li>
-						<li>NoSQL &em; References or links</li>
-						<li>HDF5 &em; hard &amp; soft links, <code>reference</code> datatype</li>
+						<li>SQL &emdash; Foreign keys</li>
+						<li>NoSQL &emdash; References or links</li>
+						<li>HDF5 &emdash; hard &amp; soft links, <code>reference</code> datatype</li>
 					</ul>
+				</section>
+
+				<section>
+					<h2>Thank you</h2>
 				</section>
 
 			</div>
