--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Justin Kiggins
   <p class="intro">Ph.D. Candidate in Neurosciences, UC San Diego</p>
   <p>My research explores the way that vocal communication signals are perceived and represented.</p>
 
-  <h2>Projects</h2>
+  <h2>Code</h2>
   <ul>
     <li><a href="https://github.com/gentnerlab/pyoperant">PyOperant</a>: hardware abstraction and shareable protocols for operant conditioning</li>
     <li><a href="https://github.com/gentnerlab/django-broab">django-broab</a>: extendable Django models for electrophysiology data</li>
