full stack neuroscientist

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@ layout: default
 title: Justin Kiggins
 ---
 <div class="home" id="home">
+  <h1 class="title">Full Stack Neuroscientist</h1>
   <p class="intro">Ph.D. Candidate in Neurosciences, UC San Diego</p>
-  <p>My research explores the way that vocal communication signals are perceived and represented. More specifically, I'm interested in how neural systems represent and learn sequences like those found in speech and music. The integration time of these signals (hundreds to thousands of milliseconds) pose particular challenges to spectrotemporal receptive field models, which typically only integrate over tens of milliseconds. I employ automated behavioral training, extracellular electrophysiology, and computational analyses to answer these questions.</p>
 
-  <h2>Code</h2>
+  <h2>Research</h2>
+  <p>Music and language are two of the most powerful tools that humans have developed, but how neural systems represent and learn even the most basic sequences found in language and music is unclear. I use automated behavioral training, extracellular electrophysiology, and machine learning to understand how the brains of European starlings learn to recognize vocal sequences.</p>
+
+  <h2>Tools</h2>
+  <p>I build software tools for making neuroscience a bit easier.</p>
   <ul>
     <li><a href="https://github.com/gentnerlab/pyoperant">PyOperant</a>: hardware abstraction and shareable protocols for operant conditioning</li>
     <li><a href="https://github.com/gentnerlab/django-broab">django-broab</a>: extendable Django models for electrophysiology data</li>
