--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ title: Justin Kiggins
   <h2>Research</h2>
   <p>Music and language are two of the most powerful tools that humans have developed, but how neural systems represent and learn even the most basic sequences found in language and music is unclear. I use automated behavioral training, extracellular electrophysiology, and machine learning to understand how the brains of European starlings learn to recognize vocal sequences.</p>
 
-  <h2>Tools</h2>
-  <p>I build software tools for making neuroscience a bit easier.</p>
+  <h2>Featured Projects</h2>
   <ul>
-    <li><a href="https://github.com/gentnerlab/pyoperant">PyOperant</a>: hardware abstraction and shareable protocols for operant conditioning</li>
+    <li><a href="https://github.com/opyrant/opyrant">Opyerant</a>: hardware abstraction and shareable protocols for operant conditioning</li>
+    <li><a href="https://github.com/neuromusic/crcnsget">command line tool for downloading data from crcns.org</a></li>
     <li><a href="https://github.com/gentnerlab/django-broab">django-broab</a>: extendable Django models for electrophysiology data</li>
     <li><a href="https://github.com/gentnerlab/sturnus">sturnus</a>: Django site for storing behavior and neurophysiology data</li>
   </ul>
