--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Justin Kiggins
   <h2>Featured Projects</h2>
   <ul>
     <li><a href="https://github.com/opyrant/opyrant">Opyerant</a>: hardware abstraction and shareable protocols for operant conditioning</li>
-    <li><a href="https://github.com/neuromusic/crcnsget">command line tool for downloading data from crcns.org</a></li>
+    <li><a href="https://github.com/neuromusic/crcnsget">crcnsget</a>: command line tool for downloading data from crcns.org</li>
     <li><a href="https://github.com/gentnerlab/django-broab">django-broab</a>: extendable Django models for electrophysiology data</li>
     <li><a href="https://github.com/gentnerlab/sturnus">sturnus</a>: Django site for storing behavior and neurophysiology data</li>
   </ul>
