new job. new landing page.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 ---
 layout: default
-title: Justin Kiggins
+title: Justin Kiggins, Ph.D.
 ---
 <div class="home" id="home">
-  <h1 class="title">Full Stack Neuroscientist</h1>
-  <p class="intro">Ph.D. Candidate in Neurosciences, UC San Diego</p>
 
-  <h2>Research</h2>
-  <p>Music and language are two of the most powerful tools that humans have developed, but how neural systems represent and learn even the most basic sequences found in language and music is unclear. I use automated behavioral training, extracellular electrophysiology, and machine learning to understand how the brains of European starlings learn to recognize vocal sequences.</p>
+  I'm a data scientist in the Neural Coding group at the Allen Institute for Brain Science, where I develop data analysis pipelines for behavior and neurophysiology, algorithms for behavioral training, and machine learning analyses for large scale neuronal recordings.
+
+  I do most of my work in Python, though I can code up a regression in R if necessary.
 
   <h2>Featured Projects</h2>
   <ul>
