--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: Justin Kiggins, Ph.D.
 
   <h2>Featured Projects</h2>
   <ul>
+    <li><a href="https://github.com/AllenInstitute/neuroglia">neuroglia</a>: scikit-learn pipelines for systems neuroscience</li>
     <li><a href="https://github.com/opyrant/opyrant">Opyrant</a>: hardware abstraction and shareable protocols for operant conditioning</li>
     <li><a href="https://github.com/neuromusic/crcnsget">crcnsget</a>: command line tool for downloading data from crcns.org</li>
     <li><a href="https://github.com/gentnerlab/django-broab">django-broab</a>: extendable Django models for electrophysiology data</li>
