--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Justin Kiggins, Ph.D.
 
   <h2>Current Projects</h2>
   <ul>
-    <li><a href="https://github.com/spacetx/starfish">starfish</a>: scalable pipelines for image-based transctiptomics (product manager)</li>
+    <li><a href="https://github.com/spacetx/starfish">starfish</a>: scalable pipelines for image-based transcriptomics (product manager)</li>
     <li><a href="https://github.com/chanzuckerberg/cellxgene">cellxgene</a>: interactive explorer for single-cell transcriptomics data (product manager)</li>
   </ul>
 
