updates landing page

--- a/index.html
+++ b/index.html
@@ -1,28 +1,18 @@
 ---
 layout: default
-title: Justin Kiggins, Ph.D.
+title: Justin Kiggins, PhD
 ---
 <div class="home" id="home">
 
-  I build open source software products to accelerate biomedical science.
+  <p> Justin Kiggins is a Product Manager at the Chan Zuckerberg Initiative, where he works with the Science Tools and Applications team, building open source data processing and visualization tools for computational biology and microscopy. </p>
 
-  Product Manager at the Chan Zuckerberg Initiative.
+  <img src="assets/img/justin-kiggins.jpg" alt="">
+  <p> Justin has spent his career building technology for science and social change efforts.
+  Before getting a PhD in Neuroscience at UC San Diego, he co-founded a nonprofit serving refugees in the Phoenix metro area and helped launch HarassMap, a street harassment reporting tool based in Cairo, Egypt.
+  His research career focused on how brains process sensory information, where he applied machine learning approaches to the analysis of behavioral and neurophysiological data.
+  While working as a scientist at the Allen Institute for Brain Science, he co-led user research and product design for the Brain Observatory.
+  He has been building open source tools for scientific data management, analysis, and visualization since 2012.</p>
 
-  <h2>Current Projects</h2>
-  <ul>
-    <li><a href="https://github.com/spacetx/starfish">starfish</a>: scalable pipelines for image-based transctiptomics (product manager)</li>
-    <li><a href="https://github.com/chanzuckerberg/cellxgene">cellxgene</a>: interactive explorer for single-cell transcriptomics data (product manager)</li>
-  </ul>
-
-  <h2>Past Projects</h2>
-  <ul>
-    <li><a href="https://github.com/AllenInstitute/neuroglia">neuroglia</a>: scikit-learn pipelines for systems neuroscience (lead developer)</li>
-    <li><a href="https://github.com/opyrant/opyrant">Opyrant</a>: hardware abstraction and shareable protocols for operant conditioning (lead developer)</li>
-    <li><a href="https://github.com/neuromusic/crcnsget">crcnsget</a>: command line tool for downloading data from crcns.org (solo developer)</li>
-    <li><a href="https://github.com/gentnerlab/django-broab">django-broab</a>: extendable Django models for electrophysiology data (solo developer)</li>
-    <li><a href="https://github.com/gentnerlab/sturnus">sturnus</a>: Django site for storing behavior and neurophysiology data (solo developer)</li>
-  </ul>
-  
   <h2>Talks & Interviews</h2>
   <ul>
     <li><a href="https://talkpython.fm/episodes/show/164/python-in-brain-research-at-the-allen-institute">Python in Brain Research at the Allen Institute</a> Talk Python to Me, Episode #164</li>
